# perfume

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  release-plz.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/: animals.txt  colors.txt  gerunds.txt
examples/: remote_store_ureq.rs
examples/common/: mod.rs  test_server.rs
src/: codegen.rs  hex_string.rs  lib.rs  main.rs  random.rs
src/identity/: mod.rs  population.rs  storage.rs
