[package]
name = "perfume"
version = "0.2.0"
authors = ["Daniel James Baumann <dan.james.baumann@gmail.com>"]
description = "Impromptu conversion of sensitive metadata to persistent random names."
license = "MIT OR Apache-2.0"
repository = "https://github.com/guapodero/perfume"
keywords = ["privacy", "random", "generator"]
categories = ["authentication", "web-programming", "accessibility", "asynchronous"]
edition = "2024"

[features]
codegen = ["phf_codegen", "count-lines", "anyhow"]
nightly = []

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
cfg-if = "1"
blake3 = "1.8"
base16ct = "0.2"
thiserror = "2.0"
http = "1.3"
bytes = "1"
async-generic = "1.1"
phf = "0.12"

phf_codegen = { version = "0.12", optional = true }
count-lines = { version = "1.0", optional = true }
# for downcasting to io::Error from count-lines
anyhow = { version = "1.0", optional = true } 

[dev-dependencies]
tokio = { version = "1", features = ["macros", "test-util"] }
ureq = "3"
httparse = "1"
const_env = "0.1"
